2025-04-29

- Removed no longer existing internal render theme "MOTORIDER_DARK",
  added new internal render theme "BIKER" instead
  (server version >= 0.25.0.0)

2025-04-28

- Fixed: Spaces in temporary folder path resulted in error message
  "[SRV] Error: Could not find or load main class ...log4j.properties" 

2025-03-05

- (Re-)allowed positioning insert cursor in text input fields
- Selection in file selection window was not highlighted (Linux only!)
- Removed ability to disable the output console completely
- Suppressed meaningless SLF4J information output
- Removed work around to remove remaining temporary Tcl folder
  as Tcl bug was fixed in recent Tcl versions.
- Updated README

2025-01-28

- Now showing Tcl/Tk version and script release date in output console
- Improved tooltips for multiple server tasks configuration
- Added tooltip to maps selection
- Now accepting uppercase layer ids theme file
- Now accepting quoted unicode characters in theme file
- Updated README hints

2025-01-20

- Note:
  Values of "min_zoom_level" and "max_zoom_level" parameters
  in "Mapsforge-for-QMapShack.ini" file must! be converted
  from QMapShack zoom level to tile zoom level notation
  Conversion formula: tile zoom level = 21 - QMapShack zoom level
- Improved input handling of number values
- Changed hillshading parameter text to Mapsforge notation
- Added fast adaptive hillshading "adaptasy" (server version >= 0.23.0.1)
- Added optional parameters for minimum and maximum hillshading zoom level
  to allow overriding built-in hillshading zoom levels
  (server version >= 0.23.0.2)

2024-12-31

- Initial commit supporting only new "multiple tasks" server type
- Dropped support of old "single task" server type
- Dropped support of Java version < 11
- Added support of multiple concurrent server tasks