@@ -1,3 +1,11 @@
+2025-06-14
+
+- Made DEFAULT render theme first theme in list of available render themes
+- Up/Down key and mouse wheel in server task entry field
+  now allows scrolling through available tasks
+- Now creating not existing QMapShack defined "cachePath" and "mapPath" folders
+- Added support for Marlin-renderer for JDK17+
+
 2025-04-29
 
 - Removed no longer existing internal render theme "MOTORIDER_DARK",
